# pg2rml-star

./: CITATION.cff  README.md  pyproject.toml
example/: README.md  knowledge-graph.nt
src/pg2rml_star/: __init__.py  __main__.py  constants.py  dm_kuzu.py  dm_neo4j.py
test/: LDBC-SNB_bootstrapped_mappings.yml  README.md
